fix default Submit Button on mobile view

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main {
 /* Style showbox of Submitted rank to user after submit feedback */
 #submittedNumber {
     display: none;
-    font-size: 1.3rem;
+    font-size: 1.156rem;
     color: var(--orange);
     background-color: var(--darkBlue);
     padding: 0.5rem;
@@ -45,11 +45,12 @@ main {
 /* VoteBox styling */
 .voteBox {
     /* box-shadow: 1px 0 5rem var(--orange); */
-    width: 320px;
+    max-width: 350px;
     height: 350px;
     background-color: var(--veryDarkBlue);
     border-radius: 2rem;
     padding: 2rem 1rem;
+    overflow: hidden;
 }
 
 .boxIcon img {
@@ -73,6 +74,7 @@ main {
     font-size: 1rem;
     text-align: left;
     margin: 1rem 0 1rem 0.4rem;
+  
 }
 
 .radio-vote {
@@ -115,15 +117,20 @@ main {
 }
 /* Style Submit Button */
 .submitButton {
+    max-width: 300px;
+    align-items: center;
+    justify-content: center;
     background-color: var(--orange);
     color: var(--white);
     font-size: 1.2rem;
     letter-spacing: 0.3rem;
     margin-top: 3rem;
-    padding: 0.6rem 8rem;
+    padding: 0.4rem 3rem;;
     border-radius: 2rem;
     border: none;
     transition-duration: 250ms;
+    /* Remove submit button default style on mobile */
+    -webkit-appearance: none;
 }
 
 .submitButton:hover {
